# TerryCavanagh-VVVVVV

./: readme.adoc
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
assets/: .gitignore  game.txt  readme.adoc
code-workspaces/: desktop_version.code-workspace  dev.code-workspace  loadpng.code-workspace  mobile_version.code-workspace  tools.code-workspace
desktop_version/: vcpkg.json
dev/allegro/allegro4/: readme.adoc
dev/allegro/allegro4/examples/: CMakeLists.txt
dev/allegro/allegro4/src/examples/: readme.adoc
dev/allegro/allegro4/src/hello/: CMakeLists.txt  hello.valgrind.supp  main.c
dev/allegro/allegro5/: readme.adoc
dev/audio/: test.sh
dev/docs/: vscode.adoc
tools/editors/: readme.adoc
tools/editors/Final Level Editor/: main.cpp
tools/editors/Final Level Editor/tower1/: main.cpp
tools/editors/Final-Level-Editor/: CMakeLists.txt  vcpkg.json
tools/editors/Final-Level-Editor/logs/: Final-Level-Editor.asan.log.23024  Final-Level-Editor.asan.log.48237  Final-Level-Editor.asan.log.50251  Final-Level-Editor.asan.log.88014  Final-Level-Editor.asan.log.88870  Final-Level-Editor.asan.log.89676
tools/editors/Lab Map Editor/: main.cpp
tools/editors/Lab-Map-Editor/: CMakeLists.txt  vcpkg.json
tools/editors/Lab-Map-Editor/dev/asan/logs/: Lab-Map-Editor.asan.log.83287  Lab-Map-Editor.asan.log.86852
tools/editors/Level Mapping Editor/: main.cpp
tools/editors/Original Space Station Map Editor/: main.cpp
tools/editors/Other Map Editor/: main.cpp
tools/editors/Screenshot Outputting Map Editor/: main.cpp
tools/editors/Space Station 2 Editor/: main.cpp
tools/editors/Tower Map Editor/: main.cpp
tools/editors/Towerhallways Editor/: main.cpp
tools/editors/Warp Zone Map Editor/: main.cpp
tools/editors/World Map Fork (for Eurogamer)/: logic.hpp  main.cpp
tools/editors/World Mapping Editor/: render.hpp
